--- a/core/template/dashboard/Monitoring.html
+++ b/core/template/dashboard/Monitoring.html
@@ -40,11 +40,11 @@
 	</span>
 </center>
 	<div class="tooltips" data-cmd_id="#namedistriid#" style="margin-left:5px;display: #namedistri_display#;">
-			<span title="Distribution Linux" class="fab fa-linux" style="min-width:15px"></span>
+			<span title="Distribution Linux</br><i>Date de valeur : #namedistri_value#</br>Date de collecte : #namedistri_collect#</i>" class="fab fa-linux" style="min-width:15px"></span>
 			<span>#namedistri#</span>
 	</div>
 	<div class="tooltips" data-cmd_id="#uptimeid#" style="margin-left:5px;display: #uptime_display#;">
-			<span title="Temps d'activité (uptime)" class="fas fa-tachometer-alt" style="min-width:15px;"></span>
+			<span title="Temps d'activité (uptime)</br><i>Date de valeur : #uptime_value#</br>Date de collecte : #uptime_collect#</i>" class="fas fa-tachometer-alt" style="min-width:15px;"></span>
 			<span id="uptime#id#"></span>
 	</div>
 	<script>
@@ -53,7 +53,7 @@
 		}
     </script>
 	<div class="tooltips" style="margin-left:5px;display: #loadavg_display#;">
-			<span title="Charge système (load average)" class="fa techno-courbes3" style="width:15px;"></span>
+			<span title="Charge système (load average)</br><i>Date de valeur : #loadavg_value#</br>Date de collecte : #loadavg_collect#</i>" class="fa techno-courbes3" style="width:15px;"></span>
 			<span id="loadavg1mn#id#"></span><span id="loadavg5mn#id#"></span><span id="loadavg15mn#id#"></span>
 	</div>
 	<script>
@@ -95,7 +95,7 @@
 		}
     </script>
 	<div class="tooltips" data-cmd_id="#Mempourcid#" style="margin-left:5px;display: #Mem_display#;">
-			<span title="Mémoire vive (% libre)" class="fa techno-memory" style="width:15px;"></span>
+			<span title="Mémoire vive (% libre)</br><i>Date de valeur : #Mem_value#</br>Date de collecte : #Mem_collect#</i>" class="fa techno-memory" style="width:15px;"></span>
 			<span id="Mempourcent#id#"></span>
 	</div>
 	<script>
@@ -114,7 +114,7 @@
 		}
     </script>
 	<div class="tooltips" data-cmd_id="#Swappourcid#" style="margin-left:5px;display: #Mem_swap_display#;">
-			<span title="Mémoire Swap (% libre)" class="fas fa-list" style="width:15px;"></span>
+			<span title="Mémoire Swap (% libre)</br><i>Date de valeur : #Mem_swap_value#</br>Date de collecte : #Mem_swap_collect#</i>" class="fas fa-list" style="width:15px;"></span>
 			<span id="Swappourc#id#"></span>
 	</div>
 	<script>
@@ -133,7 +133,7 @@
 		}
     </script>
 	<div class="tooltips" data-cmd_id="#ethernet0id#" style="margin-left:5px;display: #ethernet0_display#;">
-			<span title="Trafic réseau (#ethernet0_name#)" class="fa techno-fleches" style="width:15px;"></span>
+			<span title="Trafic réseau (#ethernet0_name#)</br><i>Date de valeur : #ethernet0_value#</br>Date de collecte : #ethernet0_collect#</i>" class="fa techno-fleches" style="width:15px;"></span>
 			<span id="ethernet0#id#"></span>
 	</div>
 	<script>
@@ -142,7 +142,7 @@
 		}
     </script>
 	<div class="tooltips" data-cmd_id="#hddpourcusedid#" style="margin-left:5px;display: #hddused_display#;">
-			<span title="Espace disque (% utilisé)" class="fas fa-hdd" style="width:15px;"></span>
+			<span title="Espace disque (% utilisé)</br><i>Date de valeur : #hddtotal_value#</br>Date de collecte : #hddtotal_collect#</i>" class="fas fa-hdd" style="width:15px;"></span>
 			<span id="hddpourcused#id#"></span>
 	</div>
 	<script>
@@ -164,7 +164,7 @@
 	<script>
 		if ('#cnx_ssh#' == 'OK' || '#cnx_ssh#' == 'No') {
 			if ('#synovolume2_display#' == 'OK'){
-				$('#synovol2#id#').append('<div id="synovol2#id#" class="tooltips" data-cmd_id="#hddpourcusedv2id#" style="margin-left:5px;display: #hddusedv2_display#;"><span title="Espace disque Volume 2 Syno (% utilisé)" class="fas fa-hdd" style="width:15px"></span> <span id="hddpourcusedv2#id#"></span></div>');
+				$('#synovol2#id#').append('<div id="synovol2#id#" class="tooltips" data-cmd_id="#hddpourcusedv2id#" style="margin-left:5px;display: #hddusedv2_display#;"><span title="Espace disque Volume 2 Syno (% utilisé)</br><i>Date de valeur : #hddusedv2_value#</br>Date de collecte : #hddusedv2_collect#</i>" class="fas fa-hdd" style="width:15px"></span> <span id="hddpourcusedv2#id#"></span></div>');
 			}
 			if ('#hddpourcusedv2#' === '') {
 				$('#hddpourcusedv2#id#').append('<span></span>');
@@ -180,7 +180,7 @@
 		}
 	</script>
 	<div class="tooltips" data-cmd_id="#cpu_tempid#" style="margin-left:5px;display: #cpu_display#;">
-			<span title="Nombre CPU, fréquence (température)" class="fa techno-pc" style="width:15px;"></span>
+			<span title="Nombre CPU, fréquence (température)</br><i>Date de valeur : #cpu_value#</br>Date de collecte : #cpu_collect#</i>" class="fa techno-pc" style="width:15px;"></span>
 			<span id="cpu#id#"></span><span id="cpu_temp#id#"></span>
 	</div>
 	<script>
@@ -205,7 +205,7 @@
 		}
     </script>
 	<div class="tooltips" data-cmd_id="#perso1id#" style="margin-left:5px;display: #perso1_display#;">
-			<span class="fa" title="#nameperso1#" style="width: 15px;max-width: 15px;max-height: 15px;">#iconeperso1#</span>
+			<span class="fa" title="#nameperso1#</br><i>Date de valeur : #perso1_value#</br>Date de collecte : #perso1_collect#</i>" style="width: 15px;max-width: 15px;max-height: 15px;">#iconeperso1#</span>
 			<span id="uniteperso1#id#"></span>
 	</div>
 	<script>
@@ -226,7 +226,7 @@
 		}
     </script>
 	<div class="tooltips" data-cmd_id="#perso2id#" style="margin-left:5px;display: #perso2_display#;">
-			<span class="fa" title="#nameperso2#" style="width: 15px;max-width: 15px;max-height: 15px;">#iconeperso2#</span>
+			<span class="fa" title="#nameperso2#</br><i>Date de valeur : #perso2_value#</br>Date de collecte : #perso2_collect#</i>" style="width: 15px;max-width: 15px;max-height: 15px;">#iconeperso2#</span>
 			<span id="uniteperso2#id#"></span>
 	</div>
 	<script>
