Update template mobile (tooltips)
Add tooltips infos for mobile template.

--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -37,11 +37,11 @@
 </center>
 <div style="padding: 5px;">
 	<div class="cmd tooltips" style="margin-left:5px;display: #namedistri_display#;">
-			<span title="Distribution Linux" class="fab fa-linux" style="min-width:15px"></span>
+			<span title="Distribution Linux</br><i>Date de valeur : #namedistri_value#</br>Date de collecte : #namedistri_collect#</i>" class="fab fa-linux" style="min-width:15px"></span>
 			<span>#namedistri#</span>
 	</div>
 	<div class="cmd tooltips" style="margin-left:5px;display: #uptime_display#;">
-			<span title="Temps d'activité (uptime)" class="fas fa-tachometer-alt" style="min-width:15px"></span>
+			<span title="Temps d'activité (uptime)</br><i>Date de valeur : #uptime_value#</br>Date de collecte : #uptime_collect#</i>" class="fas fa-tachometer-alt" style="min-width:15px"></span>
 			<span id="uptime#id#"></span>
 	</div>
 	<script>
@@ -50,7 +50,7 @@
 		}
     </script>
 	<div class="cmd tooltips" style="margin-left:5px;display: #loadavg_display#;">
-			<span title="Charge système (load average)" class="fa techno-courbes3" style="width:15px"></span>
+			<span title="Charge système (load average)</br><i>Date de valeur : #loadavg_value#</br>Date de collecte : #loadavg_collect#</i>" class="fa techno-courbes3" style="width:15px"></span>
 			<span id="loadavg1mn#id#"></span><span id="loadavg5mn#id#"></span><span id="loadavg15mn#id#"></span>
 	</div>
 	<script>
@@ -91,7 +91,7 @@
 		}
     </script>
 	<div class="cmd tooltips" style="margin-left:5px;display: #Mem_display#;">
-			<span title="Mémoire vive (% libre)" class="fa techno-memory" style="width:15px"></span>
+			<span title="Mémoire vive (% libre)</br><i>Date de valeur : #Mem_value#</br>Date de collecte : #Mem_collect#</i>" class="fa techno-memory" style="width:15px"></span>
 			<span id="Mempourcent#id#"></span>
 	</div>
 	<script>
@@ -110,7 +110,7 @@
 		}
     </script>
 	<div class="cmd tooltips" style="margin-left:5px;display: #Mem_swap_display#;">
-			<span title="Mémoire Swap (% libre)" class="fas fa-list" style="width:15px"></span>
+			<span title="Mémoire Swap (% libre)</br><i>Date de valeur : #Mem_swap_value#</br>Date de collecte : #Mem_swap_collect#</i>" class="fas fa-list" style="width:15px"></span>
 			<span id="Swappourc#id#"></span>
 	</div>
 	<script>
@@ -129,7 +129,7 @@
 		}
     </script>
 	<div class="cmd tooltips" style="margin-left:5px;display: #ethernet0_display#;">
-			<span title="Trafic réseau (#ethernet0_name#)" class="fa techno-fleches" style="width:15px"></span>
+			<span title="Trafic réseau (#ethernet0_name#)</br><i>Date de valeur : #ethernet0_value#</br>Date de collecte : #ethernet0_collect#</i>" class="fa techno-fleches" style="width:15px"></span>
 			<span id="ethernet0#id#"></span>
 	</div>
 	<script>
@@ -138,7 +138,7 @@
 		}
     </script>
 	<div class="cmd tooltips" style="margin-left:5px;display: #hddused_display#;">
-			<span title="Espace disque (% utilisé)" class="fas fa-hdd" style="width:15px"></span>
+			<span title="Espace disque (% utilisé)</br><i>Date de valeur : #hddtotal_value#</br>Date de collecte : #hddtotal_collect#</i>" class="fas fa-hdd" style="width:15px"></span>
 			<span id="hddpourcused#id#"></span>
 	</div>
 	<script>
@@ -176,7 +176,7 @@
 		}
 	</script>
 	<div class="cmd tooltips" style="margin-left:5px;display: #cpu_display#;">
-			<span title="Nombre CPU, fréquence (température)" class="fa techno-pc" style="width:15px"></span>
+			<span title="Nombre CPU, fréquence (température)</br><i>Date de valeur : #cpu_value#</br>Date de collecte : #cpu_collect#</i>" class="fa techno-pc" style="width:15px"></span>
 			<span id="cpu#id#"></span><span id="cpu_temp#id#"></span>
 	</div>
 	<script>
@@ -201,7 +201,7 @@
 		}
     </script>
 	<div class="cmd tooltips" style="margin-left:5px;display: #perso1_display#;">
-			<span title="#nameperso1#" style="width:15px">#iconeperso1#</span>
+			<span title="#nameperso1#</br><i>Date de valeur : #perso1_value#</br>Date de collecte : #perso1_collect#</i>" style="width:15px">#iconeperso1#</span>
 			<span id="uniteperso1#id#"></span>
 	</div>
 	<script>
@@ -222,7 +222,7 @@
 		}
     </script>
 	<div class="cmd tooltips" style="margin-left:5px;display: #perso2_display#;">
-			<span title="#nameperso2#" style="width:15px">#iconeperso2#</span>
+			<span title="#nameperso2#</br><i>Date de valeur : #perso2_value#</br>Date de collecte : #perso2_collect#</i>" style="width:15px">#iconeperso2#</span>
 			<span id="uniteperso2#id#"></span>
 	</div>
 	<script>
