--- a/core/template/mobile/Monitoring.html
+++ b/core/template/mobile/Monitoring.html
@@ -11,7 +11,7 @@
 				$('#iconSSH#id#').append('<i title="Connexion SSH KO" class="fas fa-times tooltips" style="font-size : 1.1em;color: var(--al-danger-color) !important;"></i>');
 			}
 		</script>
-		<span title="Eteindre l'équipement" class="poweroff tooltips" data-type="action" data-subtype="other"
+		<span title="Eteindre l'Equipement" class="poweroff tooltips" data-type="action" data-subtype="other"
 			data-cmd_id="#cmd_poweroff_id#">
 			<a class="action" style="cursor: pointer;"><i class="fas fa-power-off" style="padding-left:5px;"></i></a>
 			<script>
@@ -23,7 +23,7 @@
 				});
 			</script>
 		</span>
-		<span title="Redémarrer l'équipement" class="reboot tooltips" data-type="action" data-subtype="other"
+		<span title="Redémarrer l'Equipement" class="reboot tooltips" data-type="action" data-subtype="other"
 			data-cmd_id="#cmd_reboot_id#">
 			<a class="action" style="cursor: pointer;"><i class="fas fa-sync" style="padding-left:5px;"></i></a>
 			<script>
@@ -48,7 +48,7 @@
 			<span>#namedistri#</span>
 		</div>
 		<div class="cmd tooltips" style="margin-left:5px;display: #uptime_display#;">
-			<span title="Temps d'activité (uptime) || Date valeur : #uptime_value# || Date collecte : #uptime_collect#"
+			<span title="Temps d'Activité (UpTime) || Date valeur : #uptime_value# || Date collecte : #uptime_collect#"
 				class="fas fa-tachometer-alt" style="min-width:15px"></span>
 			<span id="uptime#id#"></span>
 		</div>
